# Decorrelation-Blender

./: CITATION.cff  COLOR_BALANCE_STATUS.md  FASE_1_COMPLETADA.md  FLATTEN_STATUS.md  INSTRUCTIONS.md  LICENSE  Presentación1.pptx  README.md  STATUS_INSPECTOR_PIXELS.md  STATUS_ZOOM_PAN.md  ZOOM_PAN_FIX.md  avance implementacion.txt  colorspace_matrix_20250902_182709.txt  independent_processors_continuation.py.bak  independent_tools.py  main.py  plugins.config  pyproject.toml  requirements.txt  simple_test.py  starter.py  test_color_balance.py  test_flatten.py  test_infrastructure_complete.py  test_inspector.py  test_pipeline_v2.py  test_zoom_pan.py  test_zoom_pan_fixed.py  validation.py  validation_analysis_20250902_182709.csv  validation_detailed_report.json  validation_issues_20250902_182709.txt
docs/: pixel_inspector.md  zoom_pan.md
examples/: basic_usage.py
src/dstretch/: __init__.py  auto_contrast_processor.py  cli.py  color_balance_processor.py  colorspaces.py  decorrelation.py  exact_matrices.py  flatten_processor.py  gui.py  gui_infrastructure.py  independent_processors.py  invert_processor.py  pipeline.py  pixel_inspector.py  zoom_pan_controller.py
tests/: test_decorrelation.py
validation_results/review_2025-09-02_202250/: validation_report_2025-09-02_202250.json  validation_summary_2025-09-02_202250.csv
validation_results/review_2025-09-02_204831/: validation_report_2025-09-02_204831.json  validation_summary_2025-09-02_204831.csv
validation_results/review_2025-09-02_205451/: validation_report_2025-09-02_205451.json  (+1 more)
(+12 files in other folders)
